# panda3d-rl-sim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/src/: raycaster.cpp
examples/: eval_trained.py  random_agent.py  train_ppo.py  vec_rollout.py
src/panda3d_rl_sim/: __init__.py  config.py  env.py  sensors.py  world.py
tests/: test_env.py  test_sensors.py  test_vec_env.py
